force-app/main/default/objects/Lead/fields/alpha_2_code__c.field-meta.xml
<CustomField>
    <fullName>alpha_2_code__c</fullName>
    <label>alpha 2 code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>