force-app/main/default/objects/Lead/fields/regionalBlocs__c.field-meta.xml
<CustomField>
    <fullName>regionalBlocs__c</fullName>
    <label>regionalBlocs</label>
    <length>250</length>
    <type>Text</type>
</CustomField>