force-app/main/default/objects/Lead/fields/subregion__c.field-meta.xml
<CustomField>
    <fullName>subregion__c</fullName>
    <label>subregion</label>
    <length>250</length>
    <type>Text</type>
</CustomField>