force-app/main/default/objects/Lead/validationRules/not_changing_owner.validationRule-meta.xml
<ValidationRule>
    <fullName>not_changing_owner</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(OwnerId),
				OR(ISBLANK(TEXT(LeadSource)),
							AND(ISBLANK(NumberOfEmployees),
											NOT(OR( $Profile.Name =&apos;System Administrator&apos;, $Profile.Name =&apos;Contract Manager&apos;))),
							AND(ISBLANK(Country),
											NOT( $Profile.Name =&apos;System Administrator&apos;))
							)
				)</errorConditionFormula>
    <errorMessage>To change the owner some information must be fullfiled</errorMessage>
</ValidationRule>